packages/typ/tests/fixtures/diagnostics/0171_adt_record_update_int_field_05.ml.infer.expected
File "0171_adt_record_update_int_field_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0171_adt_record_update_int_field_05 is not a valid module name.

File "0171_adt_record_update_int_field_05.ml", line 3, characters 35-39:
3 | let _ = { base_epsilon with size = true }
                                       ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
